added some data

--- a/index.html
+++ b/index.html
@@ -203,8 +203,8 @@
   <footer>
     <div class="footer-containe>
       <div class="footer-section about">
-        <h3>About NeXa Home</h3>
-        <p>Nea Home brings you the latest in smart home technology, ensuring comfort, security, and efficiency with
+        <h3 id="footer-pera">About NeXa Home</h3>
+        <p id="footer-pera">Nea Home brings you the latest in smart home technology, ensuring comfort, security, and efficiency with
           every product.</p>
       </div>
       <div class="footer-section links">
