added some data

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
     <div class="footer-containe>
       <div class="footer-section about">
         <h3 id="footer-pera">About NeXa Home</h3>
-        <p id="footer-pera">Nea Home brings you the latest in smart home technology, ensuring comfort, security, and efficiency with
+        <p id="footer-pera">Nexa Home brings you the latest in smart home technology, ensuring comfort, security, and efficiency with
           every product.</p>
       </div>
       <div class="footer-section links">
